--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ajv": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "sass": "^1.77.5",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
